--- a/linha.html
+++ b/linha.html
@@ -2,146 +2,105 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Cadastro de Linha</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Linhas - Sistema de Rastreabilidade</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-
+    html { scroll-behavior: smooth; }
     body {
+      margin:0;
       font-family: Arial, sans-serif;
-      min-height: 100vh;
+      background: url('linha-bg.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
+      position: relative;
+    }
+    body::before {
+      content:"";
+      position: fixed;
+      top:0; left:0; right:0; bottom:0;
+      background: rgba(0,0,0,0.3);
+      z-index: -1;
+    }
+    header { text-align:center; padding:30px; }
+    header h1 { margin:0; font-size:28px; }
+    section {
+      max-width: 900px;
+      margin: 30px auto;
+      padding:20px;
+      border-radius:8px;
+      background: rgba(255,255,255,0.9);
+      color:#333;
+    }
+    .duvidas-ajuda {
+      position: fixed;
+      bottom: 30px;
+      left: 30px;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-      position: relative;
-      background-color: #222;
+      flex-direction: column;
+      gap: 10px;
+      z-index:10;
     }
-
-    /* Imagem de fundo cobrindo toda a tela */
-    body img.bg {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover; /* preenche toda a tela */
-      opacity: 0.6; /* semi-transparente */
-      z-index: 0;
+    .duvidas-ajuda button {
+      padding:10px 15px;
+      border-radius:6px;
+      border:none;
+      background:#28b463;
+      color:white;
+      cursor:pointer;
     }
-
-    .container {
-      position: relative;
-      z-index: 1;
-      background: rgba(0, 0, 0, 0.7); /* fundo semi-transparente */
-      padding: 25px 30px;
-      border-radius: 15px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.6);
-      width: 50%; /* formulário menor */
-      max-width: 500px;
-      min-width: 300px;
-      text-align: center;
-      transition: all 0.3s ease;
-    }
-
-    h1 {
-      font-size: 24px;
-      margin-bottom: 20px;
-      color: #fff;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
-    }
-
-    .form-group {
-      margin-bottom: 15px;
-      text-align: left;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 6px;
-      font-weight: bold;
-      color: #fff;
-    }
-
-    input, select {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border: none;
-      border-radius: 8px;
-      font-size: 14px;
-    }
-
-    button {
-      background-color: #007BFF;
-      color: white;
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      width: 100%;
-      margin-top: 15px;
-      font-size: 15px;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
-    /* Responsividade */
-    @media (max-width: 1024px) {
-      .container { width: 60%; }
-    }
-
-    @media (max-width: 768px) {
-      .container { width: 70%; padding: 20px; }
-      h1 { font-size: 22px; }
-      input, select { padding: 9px; font-size: 13px; }
-      button { font-size: 14px; padding: 11px; }
-    }
-
-    @media (max-width: 480px) {
-      .container { width: 90%; padding: 15px; }
-      h1 { font-size: 20px; }
-      input, select { padding: 8px; font-size: 12px; }
-      button { font-size: 13px; padding: 10px; }
+    #topBtn {
+      display:none;
+      position:fixed;
+      bottom:30px;
+      right:30px;
+      z-index:20;
+      font-size:18px;
+      border:none;
+      outline:none;
+      background-color:#2e86c1;
+      color:white;
+      cursor:pointer;
+      padding:12px 18px;
+      border-radius:50%;
     }
   </style>
 </head>
 <body>
 
-  <!-- Imagem de fundo preenchendo a tela -->
-  <img src="IMG_0531.jpeg" alt="Linha de Ônibus" class="bg">
+<header>
+  <h1>Linhas de Ônibus</h1>
+</header>
 
-  <!-- Container central menor -->
-  <div class="container">
-    <h1>Cadastro de Linha de Ônibus</h1>
-    <form>
-      <div class="form-group">
-        <label for="nome">Nome da Linha</label>
-        <input type="text" id="nome" name="nome" required>
-      </div>
+<section id="conteudo-linhas">
+  <p>Aqui você pode inserir seu código ou tabela existente de Linhas de ônibus.</p>
+</section>
 
-      <div class="form-group">
-        <label for="descricao">Descrição</label>
-        <input type="text" id="descricao" name="descricao" required>
-      </div>
+<div class="duvidas-ajuda">
+  <button onclick="scrollPara('duvidas')">Dúvidas</button>
+  <button onclick="scrollPara('ajuda')">Ajuda</button>
+</div>
 
-      <div class="form-group">
-        <label for="origem">Origem</label>
-        <input type="text" id="origem" name="origem" required>
-      </div>
+<section id="duvidas">
+  <h2>Dúvidas Frequentes</h2>
+  <p>Perguntas comuns e respostas.</p>
+</section>
 
-      <div class="form-group">
-        <label for="destino">Destino</label>
-        <input type="text" id="destino" name="destino" required>
-      </div>
+<section id="ajuda">
+  <h2>Ajuda</h2>
+  <p>Suporte e instruções.</p>
+</section>
 
-      <button type="submit">Cadastrar Linha</button>
-    </form>
-  </div>
+<button onclick="topFunction()" id="topBtn">↑</button>
+
+<script>
+const topBtn = document.getElementById("topBtn");
+window.onscroll = function(){
+  if(document.body.scrollTop>200 || document.documentElement.scrollTop>200){
+    topBtn.style.display="block";
+  }else{topBtn.style.display="none";}
+}
+function topFunction(){window.scrollTo({top:0,behavior:'smooth'});}
+function scrollPara(id){document.getElementById(id).scrollIntoView({behavior:'smooth'});}
+</script>
 
 </body>
 </html>
